task2/homework_files/canary_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: canary-web
  name: canary-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: canary-web
  type: ClusterIP
status:
  loadBalancer: {}
