task2/homework_files/prod_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: prod-web
  name: prod-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prod-web
  type: ClusterIP
status:
  loadBalancer: {}
